test/fail/classes/invalid_static_access.lly
#[
SyntaxError: Expected '::', not ).
    from invalid_static_access.lly:10
]#

define id[A](a: A): A { return a }

class test {}

id(test) new
